examples/test/testpolicy3690.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3690
  namespace: namespace386
spec:
  podSelector:
    matchLabels:
      key24: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value4
          key17: value47
      podSelector:
        matchLabels:
          key27: value20
          key24: value26
